apps/docs/src/content/docs/v1/tooling/overview.md
---
title: "Integrations Overview"
description: "The main package can compose integrations from five categories:"
banner:
  content: "You are viewing the v1 archive. For current setup guidance, use the <a href=\"/guide/getting-started\">v3 docs</a>; the v2 release is preserved at <a href=\"/v2/\">/v2/</a>."
---

The main package can compose integrations from five categories:

- Libraries
- Testing
- Formats
- Tools
- Extensions

## Example

```js
import { eslintConfig, Extension, Format, Library, Testing, Tool } from '@santi020k/eslint-config-basic'

export default eslintConfig({
  extensions: [Extension.Unicorn, Extension.Security],
  formats: [Format.Markdown],
  libraries: [Library.Tailwind, Library.Storybook],
  testing: [Testing.Vitest],
  tools: [Tool.Prettier]
})
```

## How to Read the Tooling Docs

- Use [Libraries](/v1/tooling/libraries) for framework-adjacent integrations such as Tailwind or Storybook.
- Use [Testing](/v1/tooling/testing) for Vitest, Playwright, Jest, Cypress, and Testing Library.
- Use [Formats](/v1/tooling/formats) for Markdown, MDX, JSONC, YAML, TOML, and GraphQL.
- Use [Tools](/v1/tooling/tools) for Prettier, CSpell, JSDoc, and Swagger.
- Use [Extensions](/v1/tooling/extensions) for rule packs such as Unicorn or SonarJS.

## Detection Notes

Some integrations can be inferred from `package.json`, but the final configuration still stays explicit in the source you write or the file the CLI scaffolds for you.

## Repository Examples

- Library Playgrounds: [packages/playground/libraries](https://github.com/santi020k/eslint-config-basic/tree/main/packages/playground/libraries)
- Testing Playgrounds: [packages/playground/testing](https://github.com/santi020k/eslint-config-basic/tree/main/packages/playground/testing)
- Format Playgrounds: [packages/playground/formats](https://github.com/santi020k/eslint-config-basic/tree/main/packages/playground/formats)
- Tool Playgrounds: [packages/playground/tools](https://github.com/santi020k/eslint-config-basic/tree/main/packages/playground/tools)
- Extension Playgrounds: [packages/playground/extensions](https://github.com/santi020k/eslint-config-basic/tree/main/packages/playground/extensions)

## Related Pages

- [Basic Package](/v1/packages/basic)
- [Configuration](/v1/guide/configuration)
- [Integrations Package](/v1/packages/integrations)
- [CLI](/v1/guide/cli)
